fixed manage password error

--- a/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.html
+++ b/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.html
@@ -16,7 +16,7 @@
 			</mat-form-field>
 
 			<mat-form-field>
-				<input matInput placeholder="Email Address (Disabled)" value="{{ email }}" disabled>
+				<input matInput placeholder="Email Address" value="{{ email }}" disabled>
 			</mat-form-field>
 
 			<mat-form-field>
