--- a/src/app/fcomponents/admin/admin-products/admin-products.component.html
+++ b/src/app/fcomponents/admin/admin-products/admin-products.component.html
@@ -37,7 +37,7 @@
       <tbody *ngIf="displayedProductData">
         <tr *ngFor="let data of displayedProductData">
           <td>{{data.prodId}}</td>
-          <td>{{data.title}} <br>
+          <td width="20%">{{data.title}}
             <a *ngIf="data.prodId == 10" 
                data-toggle="collapse" 
                href="#Collapse" 
@@ -48,33 +48,41 @@
             </a>
             <div *ngIf="data.prodId == 10" 
                  class="collapse mt-3" id="Collapse"
-                 style="position: absolute; width: 680px; max-height: 500px; overflow: scroll; border: #c48f45 3px solid;">
+                 style="position: absolute; width: 700px; max-height: 550px; overflow: scroll; border: #c48f45 3px solid;">
                 <div class="card card-body">
                     <h6 style="color: #c48f45;">LED Letter Lights</h6>
                         <table class="table">
                             <thead class="table-secondary">
-                                <th><span>Child ID <br>子产品ID</span></th>
-                                <th><span>Name <br>名称</span></th>
-                                <th><span>Total Stock <br>总库存</span></th>
-                                <th><span>Available Stock <br>现库存</span></th>
-                                <th><span>Calender <br>日历</span></th>
+                                <th><span>Child ID<br>子产品ID</span></th>
+                                <th><span>Name<br>名称</span></th>
+                                <th><span>Total Stock<br>总库存</span></th>
+                                <th><span>Available Stock<br>现库存</span></th>
+								<th><span>Calender<br>日历</span><br>
+									<span><i>From {{ minDate | date:'dd-MMM-yyy'}} to 
+											      {{ maxDate | date:'dd-MMM-yyy' }}</i></span>
+								</th>
                             </thead>
                             <tbody>
                                 <tr *ngFor="let childProduct of childProducts" >
                                     <td width="12%">{{ childProduct.id }}</td>
-                                    <td width="30%">{{ childProduct.productDetail1 }}</td>
+                                    <td width="20%">{{ childProduct.productDetail1 }}</td>
                                     <td>{{ childProduct.totalStock }}</td>
                                     <td>{{ childProduct.availableStock }}</td>
                                     <td width="25%">
-                                        <mat-form-field>
-                                            <input 
-                                                matInput [matDatepicker]="picker" 
-                                                placeholder="View Availablility"
-                                                [min]="minDate" [max]="maxDate"
-                                                >
-                                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                                            <mat-datepicker #picker></mat-datepicker>
-                                          </mat-form-field>
+										<input 
+											bsDaterangepicker type="text" class="form-control" 
+											placeholder="Calender of {{ childProduct.productDetail1 }} " style="width: 280px;"
+											[minDate]="minDate" [datesDisabled]="emptyDates"
+											[maxDate]="maxDate" 
+											[outsideClick]="true"
+											[bsConfig]="{
+												rangeInputFormat: 'MMMM Do', containerClass:'theme-orange',
+												selectFromOtherMonth: true,
+												adaptivePosition: true,
+												showWeekNumbers: false
+											}"
+											(click)="getDetailProductTime(childProduct.id)"
+										>
                                     </td>
                                 </tr>
                             </tbody>
