--- a/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.css
+++ b/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.css
@@ -73,4 +73,16 @@ a:hover {
   width:50px;
   margin-left:15px;
 }
+.text-line {
+  background-color: transparent;
+  color: #eeeeee;
+  outline: none;
+  outline-style: none;
+  outline-offset: 0;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: solid #eeeeee 1px;
+  padding: 3px 10px;
+}
 
