--- a/src/app/fcomponents/admin/admin-user-list/admin-user-list.component.html
+++ b/src/app/fcomponents/admin/admin-user-list/admin-user-list.component.html
@@ -24,14 +24,22 @@
 				<tr *ngFor="let user of userList">
 					<td>{{ user.id }}</td>
 					<td>{{ user.email }}</td>
-					<td *ngIf="!user.userInfo[0]">-</td>
-					<td *ngIf="user.userInfo[0]">{{ user.userInfo[0].firstName }}</td>
-					<td *ngIf="!user.userInfo[0]">-</td>
-					<td *ngIf="user.userInfo[0]">{{ user.userInfo[0].lastName }}</td>
-					<td *ngIf="!user.userInfo[0]">-</td>
-					<td *ngIf="user.userInfo[0]">{{ user.userInfo[0].phoneNumber }}</td>
-					<td *ngIf="!user.userInfo[0]">-</td>
-					<td *ngIf="user.userInfo[0]">{{ user.userInfo[0].company }}</td>
+					<td>
+						<span *ngIf="!user.userInfo[0] || user.userInfo[0].firstName == null">-</span>
+						<span *ngIf="user.userInfo[0]">{{ user.userInfo[0].firstName }}</span>
+					</td>
+					<td>
+						<span *ngIf="!user.userInfo[0] || user.userInfo[0].lastName == null">-</span>
+						<span *ngIf="user.userInfo[0]">{{ user.userInfo[0].lastName }}</span>
+					</td>
+					<td>
+						<span *ngIf="!user.userInfo[0] || user.userInfo[0].phoneNumber == null">-</span>
+						<span *ngIf="user.userInfo[0]">{{ user.userInfo[0].phoneNumber }}</span>
+					</td>
+					<td>
+						<span *ngIf="!user.userInfo[0] || user.userInfo[0].company == null">-</span>
+						<span *ngIf="user.userInfo[0]">{{ user.userInfo[0].company }}</span>
+					</td>
 					<td *ngIf="!user.userInfo[0]">-</td>
 					<td *ngIf="user.userInfo[0]">{{ user.userInfo[0].userContactId }}</td>
 					<td *ngIf="user.isSubscribe == 1" class="px-4">&radic;</td>
