--- a/src/app/fcomponents/admin/admin-products/admin-products.component.html
+++ b/src/app/fcomponents/admin/admin-products/admin-products.component.html
@@ -71,7 +71,7 @@
 							</th>
 						</thead>
 						<tbody>
-							<tr *ngFor="let childProduct of childProducts" >
+							<tr *ngFor="let childProduct of childProducts" style="text-align: center;">
 								<td width="12%">{{ childProduct.id }}</td>
 								<td width="20%">{{ childProduct.productDetail1 }}</td>
 								<td>{{ childProduct.totalStock }}</td>
