--- a/src/app/fcomponents/admin/admin-dialogs/profile-dialog/profile-dialog.component.html
+++ b/src/app/fcomponents/admin/admin-dialogs/profile-dialog/profile-dialog.component.html
@@ -1,7 +1,73 @@
-<h5 mat-dialog-title>
-	User Profile: {{ firstName }} {{ lastName }}
-</h5>
+<div class="container" *ngIf="userProfile">
+	<div class="row">
+		<h3 mat-dialog-title>
+			User id #<b>{{ userProfile.id }}</b>
+		</h3>
+	</div>
+	<hr>
 
-<mat-dialog-content>
-	<form></form>
-</mat-dialog-content>
+	<mat-dialog-content class="row">
+		<form class="col-10" [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+			<mat-form-field>
+				<input matInput class="form-control" formControlName="firstName" placeholder="First Name">
+				<mat-error *ngIf="firstName.invalid">{{getErrorMessagefname()}}</mat-error>
+			</mat-form-field>
+
+			<mat-form-field>
+				<input matInput matInput class="form-control" formControlName="lastName" placeholder="Last Name">
+				<mat-error *ngIf="lastName.invalid">{{getErrorMessageLname()}}</mat-error>
+			</mat-form-field>
+			
+			<mat-form-field>
+				<input matInput class="form-control" placeholder="Change Email Disabled" disabled>
+			</mat-form-field>
+
+			<mat-form-field>
+				<input matInput class="form-control" formControlName="phoneNumber" placeholder="Phone No.">
+				<mat-error *ngIf="phoneNumber.invalid">{{getErrorMessagePhone()}}</mat-error>
+			</mat-form-field>
+
+			<mat-form-field>
+				<input matInput class="form-control" formControlName="company" placeholder="Company">
+				<mat-error *ngIf="company.invalid">{{getErrorMessageCom()}}</mat-error>
+			</mat-form-field>
+
+			<mat-form-field>
+				<input matInput class="form-control" formControlName="discountLevel" placeholder="Discount Level">
+			</mat-form-field>
+		</form>
+
+		<div id="ButtonsWrap" class="mx-3">
+			<button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
+			<button mat-raised-button type="submit" class="primaryButton mx-2">Update</button>
+		</div>
+
+		<div *ngIf="this.profileForm.valid && errorMessage" class="alert alert-danger text-center s2" role="alert">
+			{{errorMessage}}
+		</div>
+	</mat-dialog-content>
+</div>
+
+<style>
+	form {
+		margin: 0 auto;
+	}
+	h3 {
+		margin: 0 auto;
+	}
+	mat-dialog-content {
+		min-height: 550px;
+	}
+	mat-form-field {
+		display: block;
+	}
+	#ButtonsWrap {
+		text-align: center;
+		margin-top: 10px;
+	}
+
+	.primaryButton {
+		background-color: #c48f45;
+		color: white;
+	}
+</style>
